--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         app:centerScale="1.2"
         app:itemSpace="10"
         app:autoPlaying="true"
+        app:interval="800"
         app:showIndicator="false">
     </com.vegen.open.library.VRecyclerViewBanner>
 
@@ -28,6 +29,7 @@
         app:centerScale="1.2"
         app:itemSpace="10"
         app:autoPlaying="true"
+        app:interval="800"
         app:showIndicator="false"
         app:showItemCount="TWO"
         app:firstItemMarginLeft="20dp">
